--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,29 @@
+<h1><%= @post.title %></h1>
+<h5><%= @post.content %></h5>
+<p>Categories: <%= @post.categories.map(&:name).join(' ') %></p>
+<ul>
+
+<% @post.comments.each do |c| %>
+    <%= c.user.username %> says: <%= c.content %>
+    <% end %>
+
+    <p>Users</p>
+    <% @post.users.distinct.each do |user| %>
+        <%= link_to user.username, user_path(user) %>
+
+        <% end %>
+
+        <%= form_for @post.comments.build do |f| %>
+            <%= f.hidden_field :post_id %>
+            <%= f.collection_select :user_id, User.all, :id, :username %>
+
+        <%= f.fields_for :user, User.new do |user_fields| %>
+            <%= user_fields.label :username %>
+            <%= user_fields.text_field :username %>
+            <% end %>
+
+            <%= f.label :content, "New Comment" %>
+            <%= f.text_area :content %>
+            <%= f.submit %>
+            <% end %>
 
