--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,27 @@
 
+<h1> <%= @post.title %> </h1>
+<p> <%= @post.content %> </p>
+
+<p> 
+    <%= @post.categories.map(&:name).join(", ") %>
+    </p>
+
+    <% @post.comments.each do |c| %>
+  <p>  <%= c.user.username %> says: <%= c.content %> </p>
+    <% end %>
+
+    <% @post.users.uniq.each do |u| %>
+    <%= link_to "#{u.username}", user_path(u) %>
+    <% end %>
+
+<%= form_for @post.comments.build do |f| %>
+<%= f.hidden_field :post_id, value: @post.id %>
+<%= f.label "User"%>
+<%= f.collection_select :user_id, User.all, :id, :username, {include_blank: true} %>
+<%= f.fields_for :user, User.new do |user_fields| %>
+<%= user_fields.text_field :username%>
+<% end %>
+<%= f.label "Content" %>
+<%= f.text_field :content %>
+<%= f.submit %>
+<% end %>
