--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,1 +1,10 @@
+<h1> <%= @user.username %> </h1>
 
+<ul>
+<% @user.posts.each do |p| %>
+<li> <%= p.title %> 
+<%= link_to "#{p.title}", post_path(p) %>
+</li>
+<% end %>
+
+</ul>
