--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,30 @@
+<h1><%= @post.title %></h1>
+<strong><%= @post.content %></strong>
 
+<p>Categories: <%= @post.categories.map(&:name).join(' ') %></p>
+<ul>
+
+<h3>Comments</h3>
+<% @post.comments.each do |c| %>
+    <%= c.user.username %> says: <%= c.content %>
+<% end %>
+
+<p>Users</p>
+<% @post.users.distinct.each do |user| %>
+    <%= link_to user.username, user_path(user) %>
+<% end %>
+
+<h3>Comment</h3>
+<%= form_for @post.comments.build do |f| %>
+    <%= f.hidden_field :post_id %>
+    <%= f.collection_select :user_id, User.all, :id, :username %>
+
+    <%= f.fields_for :user, User.new do |u| %>
+        <%= u.label :username %>
+        <%= u.text_field :username %>
+     <% end %>
+
+    <%= f.label :content, "New Comment" %>
+    <%= f.text_area :content %>
+    <%= f.submit %>
+<% end %>
