--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,40 @@
+<h1><%=@post.title%></h1>
 
+
+<ul>
+<% @post.categories.each do |cat| %>
+<%= cat.name %>
+<% end %>
+</ul>
+
+<%= @post.content %><br>
+
+<h2>Comments: </h2>
+<ul>
+<% @post.users.distinct.each do |user| %>
+<li>
+  <%= link_to user.username, user_path(user)%>
+  </li>
+  <% end %>
+</ul>
+<ul>
+<% @post.comments.each do |c| %>
+  <p><%= c.user.username %> says: 
+  <%= c.content %><br></p>
+<% end %>
+</ul>
+<h3>New Comment </h3>
+<%= form_for @post.comments.build do |f| %>
+  <%= f.hidden_field :post_id %>
+  <p><%= f.collection_select :user_id, User.all, :id, :username %></p>
+
+  <%= f.fields_for :user, User.new do |user_fields| %>
+    <%= user_fields.label :username %>
+    <%= user_fields.text_field :username %>
+  <% end %>
+
+  <%= f.label :content %>
+  <%= f.text_field :content %>
+<br>
+  <%= f.submit%>
+<% end %>
