--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,32 @@
-
+<h1><%= @post.title %></h1>
+<ul>
+	<% @post.categories.each do |category| %>
+		<li><%= category.name %></li>
+	<% end %>
+</ul>
+<article>
+	<section>
+		<%= @post.content %>
+	</section>
+	<% @post.comments.each do |comment| %>
+		<section><%= "#{comment.user.username} says: #{comment.content}" %></section>
+	<% end %>
+</article>
+<%= form_for(@post.comments.build) do |f| %>
+	<%= f.hidden_field :post_id, value: @post.id %>
+	<%= f.collection_select :user_id, User.all, :id, :username %>	
+	<%= f.fields_for :user, User.new  do |user_fields| %>
+		<%= user_fields.label :username %>
+		<%= user_fields.text_field :username %>
+		<%= user_fields.label :email %>
+		<%= user_fields.text_field :email %>
+	<% end  %>
+	<%= f.label :content, 'New Comment' %>
+	<%= f.text_area :content %>
+	<%= f.submit  %>
+<% end %>
+<ul>
+	<% @post.users.distinct.each do |user|  %>
+		<li><%= link_to user.username, user_path(user) %></li>
+	<% end  %>
+</ul>
